修改了packjson,增加了选项publishConfig

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  }
 }
